# clicreatures

./: CMakeLists.txt  README.org
inc/: all_cards.txt  creat.h  recipes.txt
src/: creat.cpp  main.cpp
